...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="24dp"
                android:text="Filter by Make"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/make_filter_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/make_line_2"
                app:layout_constraintStart_toEndOf="@+id/make_line_1"
                app:layout_constraintTop_toBottomOf="@+id/sort_layout" />

            <View
                android:id="@+id/make_line_2"
...
                android:autofillHints="@string/make"
                android:hint="Enter make filter here"
                android:theme="@style/item_edit_edittext"
                app:layout_constraintTop_toBottomOf="@+id/make_text"/>

            <Button
                android:id="@+id/add_make_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:text="@string/make_filter_button_text"
                app:layout_constraintBottom_toTopOf="@+id/date_text"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Start Date" />

                    <ImageButton style="@style/rounded_button"
                        android:id="@+id/start_date_button"
                        android:src="@drawable/icon_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:paddingHorizontal="10dp" />
...
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="5"
                        android:text="End Date"/>

                    <ImageButton style="@style/rounded_button"
                        android:id="@+id/end_date_button"
                        android:src="@drawable/icon_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:paddingHorizontal="10dp" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_date_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:text="@string/date_filter_button_text"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="24dp"
                android:text="Filter by Description"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/description_filter_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/desc_line_2"
                app:layout_constraintStart_toEndOf="@+id/desc_line_1"
                app:layout_constraintTop_toBottomOf="@+id/add_date_filter_button" />

            <View
                android:id="@+id/desc_line_2"
...
                android:layout_marginTop="10dp"
                android:autofillHints="@string/description_keywords_autofill"
                android:hint="Enter description filter here"
                app:layout_constraintTop_toBottomOf="@+id/desc_text" />

            <Button
                android:id="@+id/add_description_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:text="@string/description_filter_button_text"
                app:layout_constraintEnd_toEndOf="parent"
...
