...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sort_button_label"
            android:src="@drawable/taskbar_sort" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/tag_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/tag_button_label"
            android:src="@drawable/taskbar_tag" />

...
